<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:iconEditText="http://schemas.android.com/apk/res-auto"
    xmlns:logoView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/linear_container"
        style="@style/LayoutContainerNormal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/txt_alt">

        <LinearLayout
            style="@style/layoutContainerInnerNormal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_msg"
                android:textStyle="bold" />

            <widgets.IconEditText
                android:id="@+id/et_user_name"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                iconEditText:icon_mipmap="@mipmap/ic_user_avatar"
                iconEditText:icon_position="right" />


            <widgets.IconEditText
                android:id="@+id/et_password"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                iconEditText:icon_mipmap="@mipmap/ic_lock_small_red"
                iconEditText:icon_position="right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/forget_password"
                android:textColor="@android:color/white"
                android:textSize="12sp" />


            <Button
                android:id="@+id/btn_login"
                style="@style/greyButton"
                android:layout_width="match_parent"
                 android:imeOptions="actionGo"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign"/>

            <CheckBox
                android:id="@+id/chk_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:button="@drawable/checkbox_bg_dr"
                android:paddingLeft="5dp"
                android:text="@string/keep_login"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_forget_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_or"
                android:padding="10dp"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_fb_login"
                style="@style/blueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_fb"
                android:textAllCaps="false" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txt_alt"
        style="@style/styleTextAlt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_alt_register"
        android:text="@string/not_member" />


    <Button
        android:id="@+id/btn_alt_register"
        style="@style/redButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_register_now"/>

</RelativeLayout>
